# routes/api.php
@@ -12,13 +12,14 @@ Route::prefix('/v'. config('app.api.version') . '/auth')
     ->group(function () {
         Route::post('/register', [RegisterController::class, 'store'])->name('api.auth.register');
         Route::post('/login', [LoginController::class, 'store'])->name('api.auth.login');
+        Route::post('/password-forgot', [CredentialsController::class, 'passwordForgot'])->name('password.email');
     });
 
 Route::prefix('/v'. config('app.api.version') . '/auth')
     ->middleware('auth:sanctum')
     ->group(function () {
         Route::get('/logout', [LogoutController::class, 'destroy'])->name('api.auth.logout');
-        Route::post('/password-reset', [CredentialsController::class, 'store'])->name('api.auth.password-reset');
+        Route::post('/password-update', [CredentialsController::class, 'passwordUpdate'])->name('api.auth.password-update');
     });
 
 Route::prefix('/v'. config('app.api.version'))
